@@ -1743,7 +1743,7 @@
 	  <child>
 	    <widget class="GtkLabel" id="PolicyWindowPolicyTextTab">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">policy.conf</property>
+	      <property name="label" translatable="yes">Policy Source</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">False</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
